[gd_scene load_steps=3 format=3 uid="uid://ci1vnxss5dc1t"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_ap44k"]
[ext_resource type="FontFile" uid="uid://dhnnokt7bjnx2" path="res://Dialogue/anewserifintownF.ttf" id="2_b6lds"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ap44k")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 2

[node name="Polygon2D" type="Polygon2D" parent="CanvasLayer"]
color = Color(0, 0, 0, 0.580392)
polygon = PackedVector2Array(-342, -350, -335, 1568, 2383, 1500, 2268, -390)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -479.0
offset_top = -121.0
offset_right = 204.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.4, 1.4)

[node name="Resume" type="Button" parent="CanvasLayer/VBoxContainer"]
process_mode = 2
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b6lds")
theme_override_font_sizes/font_size = 25
text = "Resume Game"

[node name="Main Menu" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b6lds")
theme_override_font_sizes/font_size = 25
text = "Return To Main Menu"

[node name="Exit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_b6lds")
theme_override_font_sizes/font_size = 25
text = "Exit
"

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Sound Volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="ExitGlossary" type="Button" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 22.0
offset_right = 60.0
offset_bottom = 54.0
theme_override_fonts/font = ExtResource("2_b6lds")
text = "X
"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Resume" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Exit" to="." method="_on_glossary_pressed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="ExitGlossary" to="." method="_on_exit_glossary_pressed"]
